# R3XA_SPEC

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  schema-full.json  schema.json
.github/workflows/: spec.yml
docs/: conf.py  index.rst  specification.md
r3xa_spec/: __init__.py  custom_template.tex  specification.md
tests/: test_generate_spec.py  test_strip_schema.py
tools/: generate_spec.py  strip_schema.py
